Fix alignment of file upload text

--- a/apps/frontend/src/app/components/file-upload/file-upload.component.scss
+++ b/apps/frontend/src/app/components/file-upload/file-upload.component.scss
@@ -15,6 +15,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 100%;
   background-color: rgb(232, 230, 230);
   border: 2px dotted gray;
